System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.35
Blender Version
Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-23 20:37, hash: rBb3f96da2e605
Worked: (optional)
Short description of error
Outliner - Sort Alphabetically checkbox is not working. Objects are always sorted alphabetically. Collections and Viewlayer are not sorted regardless the toggle is checked or unchecked.
Exact steps for others to reproduce the error
Load the attached blend-file.
In the outliner scene tab only the objects are sorted alphabetically.
In the outliner prefs check "Sort Alphabetically".
Nothing happens.
The same problem also persists in the Outliner View Layer mode.