Fix T65060: Outliner - Sort Alphabetically checkbox is not working

Bug introduced on 78f8679cfc6d. Basically a copy/paste error in my
original collection children implementation.